force-app/main/default/objects/Committee_Membership__c/Committee_Membership__c.object-meta.xml
<CustomObject>
    <label>Committee Membership</label>
    <nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Committee Membership No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>