force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Appointment_Date__c</fullName>
    <label>Appointment Date</label>
    <type>Date</type>
</CustomField>