force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Contact__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Committee Memberships</relationshipLabel>
    <relationshipName>Committee_Memberships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>