force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Ethics_Review_Committee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Ethics_Review_Committee__c</fullName>
    <label>Ethics Review Committee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AEC</fullName>
            </value>
            <value>
                <fullName>HREC A</fullName>
            </value>
            <value>
                <fullName>HREC B</fullName>
            </value>
            <value>
                <fullName>IBC</fullName>
            </value>
            <value>
                <fullName>Low Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>