force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Is_Chair_Person__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Is_Chair_Person__c</fullName>
    <description>Used to access Membership Category field data in Flow Designer, which has a bug regarding this</description>
    <formula>INCLUDES(I_RS_Membership_Category__c, &apos;Chair&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Chair Person</label>
    <type>Checkbox</type>
</CustomField>