force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Membership_Category__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Membership_Category__c</fullName>
    <label>Membership Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>I_RS_Ethics_Review_Committee__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category A (Veterinarian)</fullName>
            </value>
            <value>
                <fullName>Category B (Current Research Experience)</fullName>
            </value>
            <value>
                <fullName>Category C (Animal Welfare)</fullName>
            </value>
            <value>
                <fullName>Category D (Lay person)</fullName>
            </value>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Current Research Experience</fullName>
            </value>
            <value>
                <fullName>Deputy Chair</fullName>
            </value>
            <value>
                <fullName>Ex-officio</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Lawyer</fullName>
            </value>
            <value>
                <fullName>Lay person</fullName>
            </value>
            <value>
                <fullName>Pastoral Care</fullName>
            </value>
            <value>
                <fullName>Professional Care</fullName>
            </value>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>