force-app/main/default/objects/Committee_Membership__c/fields/I_RS_Training_Undertaken__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Training_Undertaken__c</fullName>
    <label>Training Undertaken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>