force-app/main/default/objects/Committee_Membership__c/listViews/All_Committee_Memberships.listView-meta.xml
<ListView>
    <fullName>All_Committee_Memberships</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Contact__c</columns>
    <columns>I_RS_Ethics_Review_Committee__c</columns>
    <columns>I_RS_Membership_Category__c</columns>
    <columns>I_RS_Appointment_Date__c</columns>
    <columns>I_RS_Conclusion_Date__c</columns>
    <columns>I_RS_Training_Undertaken__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Committee Memberships</label>
</ListView>